--- a/app/src/main/res/layout/activity_timeline.xml
+++ b/app/src/main/res/layout/activity_timeline.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     tools:context="com.codepath.apps.twitterclient.TimelineActivity">
 
+
   <ListView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -14,4 +15,10 @@
     android:layout_alignParentBottom="true"
     android:layout_alignParentRight="true"
     android:layout_alignParentEnd="true"/>
+
+  <FrameLayout
+    android:id="@+id/fgCompose"
+    android:layout_height="wrap_content"
+    android:layout_width="wrap_content">
+  </FrameLayout>
 </RelativeLayout>
