--- a/app/src/main/res/menu/timeline.xml
+++ b/app/src/main/res/menu/timeline.xml
@@ -2,8 +2,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.codepath.apps.twitterclient.TimelineActivity" >
-    <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
-        android:orderInCategory="100"
-        app:showAsAction="never" />
+
+    <item android:id="@+id/action_compose"
+        android:title="@string/menu_compose"
+        android:icon="@drawable/ic_compose"
+        android:onClick="onClickCompose"
+        android:showAsAction="always" />
 </menu>
