--- a/app/src/main/res/menu/timeline.xml
+++ b/app/src/main/res/menu/timeline.xml
@@ -8,4 +8,10 @@
         android:icon="@drawable/ic_compose"
         android:onClick="onClickCompose"
         android:showAsAction="always" />
+
+  <item android:id="@+id/action_profile"
+        android:title="@string/menu_profile"
+        android:icon="@drawable/ic_profile"
+        android:onClick="onClickProfile"
+        android:showAsAction="always" />
 </menu>
