--- a/app/src/main/res/layout/activity_timeline.xml
+++ b/app/src/main/res/layout/activity_timeline.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.codepath.apps.twitterclient.TimelineActivity">
+    tools:context="com.codepath.apps.twitterclient.activities.TimelineActivity">
 
   <android.support.v4.view.ViewPager
     android:id="@+id/vpTabs"
