--- a/app/src/main/res/menu/timeline.xml
+++ b/app/src/main/res/menu/timeline.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.codepath.apps.twitterclient.TimelineActivity" >
+    tools:context="com.codepath.apps.twitterclient.activities.TimelineActivity" >
 
     <item android:id="@+id/action_compose"
         android:title="@string/menu_compose"
