--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     tools:context="com.codepath.apps.twitterclient.activities.ProfileActivity">
 
-  <fragment
+  <FrameLayout
     android:layout_width="wrap_content"
     android:layout_height="100dp"
     android:name="com.codepath.apps.twitterclient.fragments.profile.UserHeaderFragment"
@@ -13,11 +13,10 @@
     android:layout_alignParentLeft="true"
     android:layout_alignParentStart="true"
     android:layout_alignParentRight="true"
-    android:layout_alignParentEnd="true"
-    tools:layout="@layout/fragment_user_header"/>
+    android:layout_alignParentEnd="true"/>
 
 
-  <fragment
+  <FrameLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:name="com.codepath.apps.twitterclient.fragments.profile.UserTimelineFragment"
@@ -27,7 +26,6 @@
     android:layout_alignParentBottom="true"
     android:layout_alignParentRight="true"
     android:layout_alignParentEnd="true"
-    tools:layout="@layout/fragment_tweets_list"
     android:layout_below="@+id/fragmentUserHeader"/>
 
 </RelativeLayout>
