Change action bar text color

--- a/app/src/main/res/values-v14/styles_twitter.xml
+++ b/app/src/main/res/values-v14/styles_twitter.xml
@@ -38,6 +38,11 @@
         <item name="android:backgroundStacked">@drawable/ab_stacked_solid_twitter</item>
         <item name="android:backgroundSplit">@drawable/ab_bottom_solid_twitter</item>
         <item name="android:progressBarStyle">@style/ProgressBar.Twitter</item>
+        <item name="android:titleTextStyle">@style/ActionBar.TitleTextStyle</item>
+    </style>
+
+    <style name="ActionBar.TitleTextStyle" parent="@style/TextAppearance.Sherlock.Widget.ActionBar.Title">
+      <item name="android:textColor">@android:color/white</item>
     </style>
 
     <style name="ActionBar.Transparent.Twitter" parent="@style/Widget.Sherlock.Light.ActionBar">
